--- a/html/lecture 2 html part 2 input.html
+++ b/html/lecture 2 html part 2 input.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+URL">
+		<br /><br />
+		Image......<input type="file" name="file" >
+		<br /><br />
+		<input type="date" name="date">
+		<br /><br /><!DOCTYPE html>
 <html>
 <head>
 	<title>Input</title>
@@ -15,12 +20,7 @@
 		<br /><br />
 		Email.......<input type="email" name="email" placeholder="Enter your E-mail" >
 		<br /><br />
-		URL........<input type="url" name="url" placeholder="Enter URL">
-		<br /><br />
-		Image......<input type="file" name="file" >
-		<br /><br />
-		<input type="date" name="date">
-		<br /><br />
+		URL........<input type="url" name="url" placeholder="Enter 
 		
 	  
 	   <b> Gender </b> <br>
